--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,8 @@
 
 body {
   background: #282c34;
-  justify-items: center;
-  align-items: center;
- /* padding: 2em;*/
   display: flex;
+  flex-direction: row;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -59,6 +57,12 @@ body {
   overflow: hidden;
   background-color: var(--clr-card);
   cursor: pointer;
+}
+
+.character-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
 }
 
 .character-card__avatar {
