--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,6 @@
 
 body {
   background: #282c34;
-  display: flex;
-  flex-direction: row;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -63,9 +61,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
-}
+  margin: auto;
+  }
 
 .character-card__avatar {
   width: 300px;
   margin: 0 auto;
+}
+
+.pagination {
+
 }
