working with pagination rendering. Switching pages added

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,28 @@
 :root{
   --clr-card: #19c7c7;
+  --clr-pgntn: azure;
 }
 
 body {
   background: #282c34;
 }
 
-h1 {
+.box--number {
   color: azure;
   display: flex;
   justify-content: center;
+  font-size: 2em;
+  border: 2px solid var(--clr-pgntn);
+  width: 2em;
+  height: 2em;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 10%;
 }
 
 .App-link {
-  color: #61dafb;
+  color: var(--clr-pgntn);
+  border: 2px solid var(--clr-pgntn);
 }
 
 @keyframes App-logo-spin {
@@ -51,5 +60,8 @@ h1 {
 }
 
 .pagination {
+  margin-top: 5rem;
   display: flex;
+  justify-content: center;
+  gap: 1em;
 }
