--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@ body {
   cursor: pointer;
 }
 
+.character-card:hover {
+  transform: scale(1.007);
+}
+
 .character-container {
   display: flex;
   flex-wrap: wrap;
@@ -78,6 +82,19 @@ body {
   cursor: pointer;
 }
 
-.character-card__noCursor {
-  cursor: default;
+
+.character-card__btn:hover {
+  opacity: 80%;
+  transform: scale(1.03);
+}
+
+.character-single-container {
+  width: 300px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto auto;
+  border-radius: 1em;
+  overflow: hidden;
+  background-color: var(--clr-card);
 }
