--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,11 @@ body {
 }
 
 .character-card {
+  display: flex;
+  flex-direction: column;
   width: 300px;
-  justify-content: center;
-  align-items: center;
   text-align: center;
   margin: auto auto;
-  /*border: solid var(--clr-card);*/
   border-radius: 1em;
   overflow: hidden;
   background-color: var(--clr-card);
@@ -35,14 +34,14 @@ body {
 
 .character-card:hover {
   transform: scale(1.01);
-  /*border: 5px solid white;*/
+
 }
 
 .character-container {
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
-  margin: auto;
+  justify-content: space-around;
   }
 
 .character-card__avatar {
@@ -56,19 +55,13 @@ body {
   justify-content: center;
   align-content: center;
   gap: 1em;
-  padding: 5px;
 }
 
 .pagination__box {
   color: azure;
-  display: block;
-  /*justify-content: center;
-  align-content: center;*/
   font-size: 2em;
   border: 2px solid var(--clr-pgntn);
-  width: 2em;
-  height: 2em;
-  text-align: center;
+  padding: 0 12px;
   cursor: pointer;
   border-radius: 10%;
 }
@@ -82,9 +75,8 @@ body {
   font-size: 1em;
   margin-bottom: 10px;
   border-radius: 10px;
-  height: 40px;
+  padding: 10px 25px;
   font-weight: bold;
-  /*border: none;*/
   border: 3px solid white;
   cursor: pointer;
 }
@@ -95,11 +87,10 @@ body {
 }
 
 .character-single-container {
-  width: 300px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: auto auto;
   border-radius: 1em;
   overflow: hidden;
   background-color: var(--clr-card);
@@ -115,22 +106,13 @@ body {
   min-width: 600px;
 }
 
-.filter-component > input, label, select {
-  font-size: 1.2em;
-  height: 50px;
-  background: #282c34;
-  border: 2px solid white;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-  text-justify: auto;
-}
-
 input {
   height: 50px;
   color: white;
   font-size: inherit;
+  background: inherit;
+  border: none;
+
 }
 
 select {
@@ -145,12 +127,17 @@ select:hover {
 }
 
 
-label {
+select {
+    padding-top: 10px;
+}
+
+.filter-component__selector {
   background: #282c34;
   color: white;
   display: flex;
-  text-align: center;
-  gap: 10px;
   justify-content: center;
-  height: 50px;
+  border: 3px solid white;
+  border-radius: 10px;
+  gap: 5px;
+  overflow: hidden;
 }
