--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,12 @@ body {
   text-align: center;
 }
 
-.App-link {
-  color: var(--clr-pgntn);
-  border: 2px solid var(--clr-pgntn);
-}
 h2, h3 {
   margin: 5px 0;
+}
+
+img {
+  width: 100%;
 }
 
 .character-card {
@@ -30,20 +30,19 @@ h2, h3 {
   border-radius: 1em;
   overflow: hidden;
   background-color: var(--clr-card);
-
+  padding-bottom: 1em;
 }
 
 .character-card__hover {
   cursor: pointer;
 }
 
-.character-card > h2{
+.character-card h2{
   font-family: 'Creepster', cursive;
 }
 
 .character-card__hover:hover {
   transform: scale(1.01);
-
 }
 
 .character-container {
@@ -95,8 +94,6 @@ h2, h3 {
   transform: scale(1.03);
 }
 
-
-
 .filter-component {
   margin-bottom: 1em;
   width: 100%;
@@ -113,7 +110,6 @@ input {
   font-size: inherit;
   background: inherit;
   border: none;
-
 }
 
 select {
