--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,22 @@ body {
   flex-direction: column;
   background: #282c34;
   padding-top: 2em;
-
   text-align: center;
+  justify-content: center;
   color: white;
+  height: 100vh;
 }
 
-h2, h3, p {
+h2, p {
   margin: 0;
+}
+
+h2 {
+  font-size: .8rem;
+}
+
+p {
+  font-size: .6rem;
 }
 
 .character-card {
@@ -27,7 +36,7 @@ h2, h3, p {
   flex-direction: column;
   align-items: center;
   padding: 0;
-  width: 10vw;
+  width: 8.5vw;
   min-width: 100px;
   border: 5px solid white;
   border-radius: .5em;
