--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,11 @@ h2, p {
 }
 
 h2 {
-  font-size: .8rem;
+  font-size: 1rem;
 }
 
 p {
-  font-size: .6rem;
+  font-size: .8rem;
 }
 
 .character-card {
@@ -48,11 +48,6 @@ p {
   overflow: hidden;
 }
 
-.character-card__avatar {
-
-}
-
-
 .character-card__hover {
   cursor: pointer;
 }
@@ -68,6 +63,7 @@ p {
 .character-container {
   display: flex;
   flex-wrap: wrap;
+  align-items: stretch;
   gap: 1em;
   justify-content: center;
   }
