--- a/src/App.css
+++ b/src/App.css
@@ -57,28 +57,8 @@ p {
   cursor: pointer;
 }
 
-.btn-container {
-  display: flex;
-  justify-content: center;
-  gap: 1em;
-  margin-bottom: 1em;
-  }
-
 .character-card__hover:hover {
   transform: scale(1.01);
-}
-
-.character-card__btn:hover {
-  opacity: 80%;
-  transform: scale(1.03);
-}
-
-.character-card__btn {
-  width: 30%;
-  padding: .5em 1em;
-  align-self: center;
-  margin-top: .5em;
-  cursor: pointer;
 }
 
 input {
@@ -172,8 +152,8 @@ select:hover {
     min-width: 100px;
     border-radius: .5em;
     background-color: var(--clr-card);
-    color: #282c34;
     overflow: hidden;
+    max-height: 250px;
   }
 
   .character-cart-text {
@@ -184,10 +164,16 @@ select:hover {
     padding: .5em;
   }
 
+  /*.character-card__avatar{*/
+  /*  height: 30%;*/
+  /*  opacity: 70%;*/
+  /*}*/
+
+
+
   .character-card__avatar > img {
     width: 100%;
     margin: 0;
-
   }
 }
 
